<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sundeep.yahoo.com.gridsearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_imageType"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/sp_imageType"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_imageSize"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/sp_imageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView3"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_colorFilter"
        android:id="@+id/textView3"
        android:singleLine="true"
        android:layout_below="@+id/sp_imageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/sp_colorFilter"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_siteFilter"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/sp_siteFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/sp_siteFilter"
        android:gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_imageType"
        android:layout_toRightOf="@+id/textView2"
        android:textAlignment="gravity"
        android:entries="@array/imageTypeArray"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/sp_siteFilter"
        android:layout_alignStart="@+id/sp_siteFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_imageSize"
        android:entries="@array/imageSizeArray"
        android:layout_below="@+id/sp_imageType"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignLeft="@+id/sp_imageType"
        android:layout_alignStart="@+id/sp_imageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_colorFilter"
        android:entries="@array/colorFilterArray"
        android:layout_toRightOf="@+id/textView4"
        android:layout_below="@+id/sp_imageSize"
        android:layout_alignLeft="@+id/sp_imageSize"
        android:layout_alignStart="@+id/sp_imageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_siteFilter"
        android:entries="@array/imageSiteArray"
        android:layout_toEndOf="@+id/textView"
        android:layout_below="@+id/sp_colorFilter"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_saveSettings"
        android:id="@+id/button"
        android:onClick="onSubmit"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/sp_siteFilter"
        android:layout_alignEnd="@+id/sp_siteFilter"
        android:layout_marginTop="40dp" />
</RelativeLayout>
